Bug 281971 - Marble can not layer tiles properly
Summary: Marble can not layer tiles properly
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-13 21:28 UTC by Anders Lund
Modified: 2011-10-27 22:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
dgml file for the theme I try to create (13.96 KB, text/html)
2011-09-13 21:28 UTC, Anders Lund
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2011-09-13 21:28:13 UTC
Created attachment 63631 [details]
dgml file for the theme I try to create

Version:           unspecified
OS:                Linux

I am trying to create a map theme for openseamap (www.openseamap.org), which should consist of a openstreetmap layer with the openseamap tiles on top. These are transperant, apart from the seamarks which are drawn in color.

Without a blending defined, the openseamap tiles are not transperant, but no blending works well.

Reproducible: Didn't try

Steps to Reproduce:
bko is broken

Actual Results:  
bko is broken

Expected Results:  
bko is broken

OS: Linux (i686) release 3.0-ARCH
Compiler: gcc
Comment 1 Bernhard Beschow 2011-09-14 12:24:36 UTC
Git commit cbed4a36bc6b72757b9ec740037af2989e7132ec by Bernhard Beschow.
Committed on 14/09/2011 at 13:34.
Pushed by beschow into branch 'master'.

introduce OverpaintBlending

OverpaintBlending paints a tile on top of another, respecting transparency.

BUG: 281971

M  +14   -0    src/lib/blendings/BlendingAlgorithms.cpp
M  +6    -0    src/lib/blendings/BlendingAlgorithms.h
M  +1    -0    src/lib/blendings/BlendingFactory.cpp

http://commits.kde.org/marble/cbed4a36bc6b72757b9ec740037af2989e7132ec
Comment 2 Bernhard Beschow 2011-09-14 12:58:06 UTC
Git commit 643bc8b6e384cc0ece013e4172c6d3712e55020b by Bernhard Beschow.
Committed on 14/09/2011 at 13:34.
Pushed by beschow into branch 'kde-4.7'.

introduce OverpaintBlending

OverpaintBlending paints a tile on top of another, respecting transparency.

BUG: 281971
(cherry picked from commit cbed4a36bc6b72757b9ec740037af2989e7132ec)

M  +14   -0    src/lib/blendings/BlendingAlgorithms.cpp
M  +6    -0    src/lib/blendings/BlendingAlgorithms.h
M  +1    -0    src/lib/blendings/BlendingFactory.cpp

http://commits.kde.org/marble/643bc8b6e384cc0ece013e4172c6d3712e55020b
Comment 3 Bernhard Beschow 2011-10-27 22:54:16 UTC
Git commit eb315d1274262063bb0202a234fc1177e0ff23b3 by Bernhard Beschow.
Committed on 14/09/2011 at 13:34.
Pushed by beschow into branch 'KDE/4.7'.

introduce OverpaintBlending

OverpaintBlending paints a tile on top of another, respecting transparency.

BUG: 281971
(cherry picked from commit cbed4a36bc6b72757b9ec740037af2989e7132ec)

M  +14   -0    src/lib/blendings/BlendingAlgorithms.cpp
M  +6    -0    src/lib/blendings/BlendingAlgorithms.h
M  +1    -0    src/lib/blendings/BlendingFactory.cpp

http://commits.kde.org/marble/eb315d1274262063bb0202a234fc1177e0ff23b3