introduce OverpaintBlending

OverpaintBlending paints a tile on top of another, respecting transparency.

BUG: 281971
(cherry picked from commit cbed4a36bc6b72757b9ec740037af2989e7132ec)