src/lib/blendings/BlendingFactory.cpp
@@ -41,6 +41,7 @@ Blending const * BlendingFactory::findBlending( QString const & name ) const
 
 BlendingFactory::BlendingFactory()
 {
+    m_blendings.insert( "OverpaintBlending", new OverpaintBlending );
     // Neutral blendings
     m_blendings.insert( "AllanonBlending", new AllanonBlending );
     m_blendings.insert( "ArcusTangentBlending", new ArcusTangentBlending );
